[package]
name = "test-tokio-postgres"
version = "0.1.0"
authors = ["Paul Woolcock <pwoolcock@tenable.com>"]

[dependencies]
error-chain = "0.11"
futures-state-stream = "0.1"
log = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.11"
futures = "0.1.17"

[dependencies.tokio-postgres]
features = ["with-uuid"]
version = "0.3"

[dependencies.uuid]
features = ["serde"]
version = "0.5"
